# autocrawl

./: .env.example  .env.gluetun.example  .gitignore  DESIGN.md  OVERNIGHT_RUN_REPORT_2026-05-07.md  PRODUCT.md  README.md  TUTORIAL.md  agentic_seeds.yaml  autocrawl.dump  docker-compose.gluetun.yml  docker-compose.gpu.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.agentic  pyproject.toml
backend/migrations/: 0042_jina_staging.sql  0043_military_scope.sql  0044_enrichment_completeness.sql
backend/ops/: ollama_init.sh
backend/ops/grafana/dashboards/: autocrawl_overview.json
backend/ops/grafana/provisioning/dashboards/: dashboards.yml
backend/ops/prometheus/: prometheus.yml
backend/scripts/: agentic-entrypoint.sh  backfill_agentic_contacts.sql  backfill_country_from_tld.py  backfill_enrichment_completeness.py  build_specialty_index.py  import_chatgpt_db.py  normalize_industries.py  purge_non_military.py  restore_hidden_for_reenrich.py  revalidate_catalogs.py  seed_enrich_from_db.py  setup-agentic-host.ps1  setup-agentic-host.sh  setup-nllb.py  test_search_providers.py
backend/src/agentic_crawler/: __init__.py  agent.py  agent_grounding.py  agent_trace_publisher.py  backfill_drainer.py  cli.py  config.py  dedup.py  discovery.py  domain_resolver_grounding.py  enrich_agent.py  enrich_lessons.py  enrich_queue.py  enrich_success_feed.py  enrich_worker.py  gemini_grounded.py  industries_normalizer.py  jina_extract.py  jina_listing.py  knowledge.py  lessons.py  llm_factory.py  preflight.py  product_backfill_queue.py  product_backfill_worker.py  product_enricher.py  profile_slots.py  reporter.py  runner.py  scheduler.py  scope_gate.py  seeds.py  static_scraper.py  tools.py  translator.py  vendor_extract.py  workspace.py
backend/src/agentic_crawler/listing_sources/: __init__.py  awesome_lists.py  cisa_partners.py
backend/src/crawler/: __init__.py  cli.py  config.py  graph.py  scheduler.py  schemas.py  state.py
backend/src/crawler/agents/: dedup.py  discovery.py  enricher.py  extractor.py  fusion.py  name_resolver.py  pdf_finder.py  product_scope_scorer.py  reporter.py  resolver.py  scope_classifier.py  validator.py  vendor_outreach.py
backend/src/crawler/api/: app.py  deps.py
backend/src/crawler/api/routes/: config_scope.py  exhibitor_refs.py  expos.py  health.py  labs.py  orchestrator.py  overview.py  pdfs.py  runs.py  settings.py  system.py  vendors.py
backend/src/crawler/db/: __init__.py  engine.py  models.py  scope_seed.py  session.py
backend/src/crawler/db/repositories/: __init__.py  exhibitor_ref_repo.py  expo_repo.py  fusion_repo.py  pdf_repo.py  run_repo.py  scope_repo.py  vendor_email_draft_repo.py  vendor_repo.py
backend/src/crawler/observability/: logger.py  metrics.py  tracer.py
backend/src/crawler/orchestrator/: __init__.py  events.py  standalone.py
backend/src/crawler/store/: db_reporter.py  json_reporter.py  pdf_store.py  redis_queue.py  specialty_index.py  sqlite_checkpoint.py  vector_store.py
backend/src/crawler/tools/: agent_trace_buffer.py  http_proxy.py  scope_cache.py  url_utils.py
backend/src/crawler/tools/browsers/: binary_fetcher.py  fetcher.py  httpx_client.py  jina_reader.py  jina_search.py  playwright_pool.py
backend/src/crawler/tools/crawl4ai_client/: __init__.py  client.py
backend/src/crawler/tools/discovery/: katana.py
backend/src/crawler/tools/enrichment/: _disposable_domains.txt  dns_lookup.py  email_verifier.py  logo_extractor.py  tech_stack.py  vendor_site_crawl.py  wayback.py  whois_lookup.py
backend/src/crawler/tools/firecrawl/: client.py
backend/src/crawler/tools/fusion/: svg_composer.py
backend/src/crawler/tools/llm/: cloud_router.py  openai_client.py  queue.py  translator.py
backend/src/crawler/tools/parsers/: email_harvester.py  html_parser.py  pdf_parser.py  schema_org.py  sitemap.py
backend/src/crawler/tools/proxies/: flaresolverr.py  rate_limit.py
backend/src/crawler/tools/recon/: __init__.py  crtsh.py  urlscan.py
backend/src/crawler/tools/scrapers/: allconferences.py  base.py  conferenceindex.py  eventseye.py  generic.py  pdf_extractor.py  registry.py  tentimes.py  wikipedia.py
backend/src/crawler/utils/: text.py
backend/tests/: conftest.py  test_industries_normalizer.py
backend/tests/fixtures/html/: 10times_xldefense.html
backend/tests/unit/: test_api_routes.py  test_email_harvester.py  test_email_verifier.py  test_fusion_agent.py  test_fusion_repo.py  test_jina_extract.py  test_jina_listing.py  test_json_reporter.py  test_katana_discovery.py  test_logo_and_tech_stack.py  test_name_resolver.py  test_pdf_extractor.py  test_pdf_finder.py  test_pdf_parser.py  test_pdf_store.py  test_region_detect.py  test_resolver.py  test_schemas.py  test_svg_composer.py  test_translator.py  test_url_utils.py  test_wikipedia_scraper.py
backend/tools/: expand_ccipt_seeds.py
config/: agentic_seeds.yaml  (+3 more)
(+267 files in other folders)
