[project]
name = "autocrawler"
version = "0.1.0"
description = "Autonomous 24/7 crawler for security/defense expos and exhibitor to vendor enrichment"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "AutoCrawler Team" }]

dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    # 0.3.6+ is required for the `reasoning` kwarg on ChatOllama, which maps
    # to `think:false` in the Ollama API and actually skips the reasoning
    # phase on gpt-oss / Qwen3 / DeepSeek-R1 (older versions silently ignore).
    "langchain-ollama>=0.3.6",
    "langchain-community>=0.3.0",
    # Quantity pivot 2026-05-21 — Gemini grounding + OpenRouter deep-research
    # sebagai escape hatch saat Ollama corporate VPN down. ChatGoogleGenerativeAI
    # mendukung tools=[{"google_search_retrieval":{}}] biar agent dapat web grounding
    # via Google internal infra (bypass bot-detection target site).
    "langchain-google-genai>=2.0.0",
    "google-generativeai>=0.8.0",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",

    # Pinned to the 1.49.x line so pip resolves to the playwright version
    # whose pre-bundled Chromium matches what's already in the base image
    # (`mcr.microsoft.com/playwright/python:v1.49.1-jammy` ships Chromium 1148).
    # crawl4ai>=0.7 requires playwright>=1.49.0, so the floor is non-negotiable.
    # If you bump beyond 1.49.x, also bump the FROM line in Dockerfile to a
    # base image with the matching Chromium build, otherwise the install step
    # wipes the bundled Chromium and re-downloads ~170MB from cdn.playwright.dev
    # (painfully slow from Indonesia at typical peering rates).
    "playwright>=1.49.0,<1.50.0",
    "playwright-stealth>=1.0.6",
    "undetected-chromedriver>=3.5.5",
    "selenium>=4.25.0",
    "selenium-stealth>=1.0.6",
    "httpx[http2]>=0.27.0",
    "aiohttp>=3.10.0",
    "curl-cffi>=0.7.0",
    "scrapy>=2.11.2",
    "crawl4ai>=0.7.0",

    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "selectolax>=0.3.21",
    "trafilatura>=1.12.0",
    "newspaper3k>=0.2.8",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "extruct>=0.17.0",
    "dateparser>=1.2.0",
    "tldextract>=5.1.0",

    "ddgs>=6.3.0",
    "feedparser>=6.0.11",
    "wikipedia-api>=0.7.1",
    "python-whois>=0.9.4",
    "dnspython>=2.7.0",

    "firecrawl-py>=1.5.0",

    "cloudscraper>=1.2.71",
    "fake-useragent>=1.5.1",

    "redis[hiredis]>=5.1.0",
    # Chroma 1.x removed /api/v1 routes that this client hits. Stay on the
    # last 0.5.x line until the vector_store wrapper is migrated to v2.
    "chromadb>=0.5.0,<1.0",
    "duckdb>=1.1.0",
    "pyarrow>=17.0.0",

    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "langfuse>=2.50.0",

    "apscheduler>=3.10.4",
    "typer>=0.12.5",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
    "json-repair>=0.30.0",
    "uvloop>=0.20.0; sys_platform != 'win32'",
    "anyio>=4.6.0",
    "rich>=13.8.0",

    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",

    "ctranslate2>=4.4.0",
    "sentencepiece>=0.2.0",
    "huggingface-hub>=0.25.0",
    "transformers>=4.45.0",
]

[project.optional-dependencies]
# OCR is now served by the existing Ollama instance via a vision-capable model
# (default `gemma4:e4b`) — no extra Python deps needed. PDF parser POSTs the
# rendered page PNG to /api/chat and returns the verbatim text. Kept here for
# back-compat so `pip install .[ocr]` still resolves cleanly; intentionally empty.
ocr = []
# Agentic browser: AI-driven web automation that drives a real Chromium via
# Browser-Use + vision-capable Ollama (qwen3.6:27b). Runs as a sibling service
# to the LangGraph crawler — same storage sink, independent scheduling.
agentic = [
    "browser-use>=0.1.40",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "mypy>=1.11.0",
    "respx>=0.21.1",
]

[project.scripts]
crawl = "crawler.cli:app"
agentic-crawl = "agentic_crawler.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawler", "src/agentic_crawler"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM", "RET", "PL"]
ignore = ["PLR0913", "PLR2004", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
